--- a/root/picture.html
+++ b/root/picture.html
@@ -6,10 +6,10 @@
     </head>
     <body><br/>
 <br/>
-<div align="center"><font size="5"> <strong>你居然想看图，不想关注我</strong></font></div>
+<div align="center"><font size="5"> <strong>美丽的风景画</strong></font></div>
 <br/>
 <!--<div  align="center">a w s l</div>-->
 <br/>
 <br/>
-<div align="center"><img src="./xxx.jpg" title="awsl"/></div>
+<div align="center"><img src="./xxx.jpeg" title="awsl"/></div>
 </html>
