--- a/root/welcome.html
+++ b/root/welcome.html
@@ -7,19 +7,19 @@
     <body>
     <br/>
     <br/>
-    <div align="center"><font size="5"> <strong>是时候做出选择了</strong></font></div>
+    <div align="center"><font size="5"> <strong>Please Choose！！！</strong></font></div>
 	<br/>
 		<br/>
 		<form action="5" method="post">
- 			<div align="center"><button type="submit">xxx.jpg</button></div>
+ 			<div align="center"><button type="submit">Picture</button></div>
                 </form>
 		<br/>
                 <form action="6" method="post">
-                        <div align="center"><button type="submit" >xxx.avi</button></div>
+                        <div align="center"><button type="submit" >Video</button></div>
                 </form>
 		<br/>
 		<form action="7" method="post">
- 			<div align="center"><button type="submit">关注我</button></div>
+ 			<div align="center"><button type="submit">Personal Space</button></div>
                 </form>
 		
         </div>
